[workspace]

members = [
    "base",
    "spotify_api",
    "twitter_api",
    "utils",
    "interface"
]

[workspace.dependencies]
async-trait = "0.1.73"
base64 = "0.21.4"
bytes = "1.5.0"
chrono = "0.4.31"
reqwest = { version = "0.11.22", default-features = true, features = ["json", "blocking", "multipart"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.32.0", default-features = true, features = ["full"] }
url = "2.3.1"
