[package]
name = "base"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
interface = {path = "../interface"}
twitter_api = {path = "../twitter_api"}
spotify_api = {path = "../spotify_api"}
reqwest = { version = "0.11.13", features = ["json", "blocking", "multipart"] }
