[package]
name = "base"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest.workspace = true
tokio.workspace = true

interface = {path = "../interface"}
twitter_api = {path = "../twitter_api"}
spotify_api = {path = "../spotify_api"}
misskey_api = {path = "../misskey_api"}
