[package]
name = "spotify_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils" }
chrono = "0.4.23"
base64 = "0.13.1"
reqwest = { version = "0.11.13", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.3.1"
webbrowser = "0.8.2"
