[package]
name = "twitter_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.3.1"
webbrowser = "0.8.2"
rand = "0.8.5"
chrono = "0.4.23"
base64 = "0.13.1"
reqwest = { version = "0.11.13", features = ["json", "blocking", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hmac-sha1 = "0.1.3"
urlencoding = "2.1.2"
bytes = "1"
