[package]
name = "twitter_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils" }
interface = { path = "../interface" }

async-trait.workspace = true
base64.workspace = true
bytes.workspace = true
chrono.workspace = true
hmac-sha1 = "0.1.3"
rand = "0.8.5"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
url.workspace = true
urlencoding = "2.1.2"
